prepare docker files

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.10-slim
+FROM python:3.10
 
 # Define environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
@@ -9,7 +9,7 @@ ENV PIPENV_VENV_IN_PROJECT true
 WORKDIR /app
 
 # [Docker-ref] requirements.txt
-COPY Pipfile Pipfile.lock ./
+# COPY Pipfile Pipfile.lock ./
 
 # Install Dependencies
 RUN apt-get update -y && apt-get install -y \
@@ -18,11 +18,21 @@ RUN apt-get update -y && apt-get install -y \
   && rm -rf /var/lib/apt/lists/* \
   && pip install --upgrade pip \
   && pip install pipenv wait-for-it \
+  && pipenv lock \
   && pipenv sync \
   && apt-get purge -y --auto-remove gcc
 
-COPY . .
-ENTRYPOINT ["/app/scripts/docker-entrypoint.sh"]
+# COPY . .
+COPY ./ccbda_project /app/ccbda_project
+COPY ./djangoProject3 /app/djangoProject3
+COPY ./manage.py /app/manage.py
+COPY ./requirements.txt /app/requirements.txt
+RUN pip install -r requirements.txt
+COPY ./scripts /app/scripts
+RUN chmod +x -R /app/scripts/
+COPY ./templates /app/templates
+
+# ENTRYPOINT ["tail", "-f", "/dev/null"]
 
 EXPOSE 8000
 CMD ["/app/scripts/prod/run_app.sh"]
