--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,7 @@
-django
-validate_email
-bcrypt
-boto3
+Django==4.0
+django-storages==1.12.3
+validate-email==1.3
+bcrypt==3.1.7
+boto3==1.21.22
+djangorestframework==3.13.1
+django-cors-headers==3.12.0
