--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,7 @@ bcrypt==3.1.7
 boto3==1.21.22
 djangorestframework==3.13.1
 django-cors-headers==3.12.0
+joblib==1.1.0
+scikit-learn==1.1.1
+xgboost==1.6.1
+pandas==1.4.2
